Carousel correctly aligned

--- a/src/App.css
+++ b/src/App.css
@@ -27,17 +27,15 @@ header > img {
 
 .carousel {
   display: block;
-  max-width: 500px;
   margin: auto;
-  min-height: 900px;
+  min-height: 1200px;
+  max-width: 500px;
 }
 
 .carousel-cell {
   border: 5px solid white;
   align-self: center;
 }
-
-
 
 .nav_btn {
   position: absolute;
@@ -64,6 +62,27 @@ header > img {
 }
 .nav_btn_right {
   right: 0;
+}
+
+.ind {
+  width: 20px;
+  height: 20px;
+  list-style: none;
+  border: 4px solid #f5f5f5;
+  transform: rotate(135deg);
+  display: inline-block;
+  cursor: pointer;
+  position: relative;
+  z-index: 100;
+}
+
+.ind.active {
+  background-color: #000;
+  transition: 500ms 200ms;
+}
+
+.ind:not(:last-child) {
+  margin-right: 1.4rem;
 }
 
 .carousel .carousel-status {
